--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-fileupload": "^1.4.3",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
     "mongoose": "^8.1.2",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
